fix: text-align only on p-elements

--- a/assets/sass/fonts.scss
+++ b/assets/sass/fonts.scss
@@ -18,5 +18,4 @@ body {
   font-family: "Roboto",Arial,Helvetica,sans-serif;
   word-wrap: break-word;
   hyphens: auto;
-  text-align: justify;
 }
