--- a/assets/sass/headings.scss
+++ b/assets/sass/headings.scss
@@ -5,7 +5,6 @@ h1 {
   margin-bottom: 2rem;
   text-wrap: balance;
   scroll-margin-top: 7rem;
-  text-align: left;
 }
 
 h2 {
@@ -15,7 +14,6 @@ h2 {
   font-weight: 700;
   text-wrap: balance;
   scroll-margin-top: 7rem;
-  text-align: left;
 }
 
 h3 {
@@ -25,7 +23,6 @@ h3 {
   font-weight: 700;
   text-wrap: balance;
   scroll-margin-top: 7rem;
-  text-align: left;
 }
 
 h4 {
@@ -35,5 +32,4 @@ h4 {
   font-weight: 700;
   text-wrap: balance;
   scroll-margin-top: 7rem;
-  text-align: left;
 }
