--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -73,6 +73,7 @@ img {
 
 p {
   margin-bottom: 3.2rem;
+  text-align: justify;
 }
 
 p:has( + ul) {
